# BachelorThesis

./: CMakeLists.txt  README.md
glm/: Makefile  cmake_install.cmake
res/shaders/: sdf.vert  sdf1.frag  sdf2.frag  sdf3.frag
src/: particleapp.cpp  particlesystem.cpp  particlesystem.h  sdf.cpp  sdf.h
src/cuda/: CMakeLists.txt  Makefile  cmake_install.cmake  integration.cu  integration_kernel.cuh  kernel_impl.cuh  wrappers.cuh  wrappers_cuda.cu
src/rendering/: renderer.cpp  renderer.h
src/ui/: CMakeLists.txt.bak
